Add toggle sub list

--- a/blogr-landing-page-main/index.html
+++ b/blogr-landing-page-main/index.html
@@ -25,15 +25,16 @@
           class="hamburger"
           src="./css/images/icon-hamburger.svg"
           alt="icon hamburger"
-          onclick="prueba()"
+          onclick="toggleHamburger()"
         />
         <nav class="header__nav">
           <ul>
-            <li>
+            <li class="list">
               Product<span
-                ><img src="./css/images/icon-arrow-dark.svg" alt=""
+                ><img src="./css/images/icon-arrow-dark.svg" alt="arrow"
+                class="arrow"                
               /></span>
-              <ul class="sub-list hiden">
+              <ul class="sub-list">
                 <li>Overview</li>
                 <li>Pricing</li>
                 <li>Marketplace</li>
@@ -41,20 +42,22 @@
                 <li>Integrations</li>
               </ul>
             </li>
-            <li>
+            <li class="list">
               Company<span
-                ><img src="./css/images/icon-arrow-dark.svg" alt=""
+                ><img src="./css/images/icon-arrow-dark.svg" alt="arrow"
+                class="arrow"                
               /></span>
-              <ul class="sub-list hiden">
+              <ul class="sub-list">
                 <li>About</li>
                 <li>Team</li>
                 <li>Blog</li>
                 <li>Careers</li>
               </ul>
             </li>
-            <li>
+            <li class="list">
               Connect<span
-                ><img src="./css/images/icon-arrow-dark.svg" alt=""
+                ><img src="./css/images/icon-arrow-dark.svg" alt="arrow"
+                class="arrow"                
               /></span>
               <ul class="sub-list">
                 <li>Contact</li>
