Add formatting to file

--- a/blogr-landing-page-main/index.html
+++ b/blogr-landing-page-main/index.html
@@ -16,11 +16,7 @@
   <body>
     <header class="header">
       <div class="header__states">
-        <img
-        src="./css/images/logo.svg"
-        width="100px"
-        alt="logo"
-        />
+        <img src="./css/images/logo.svg" width="100px" alt="logo" />
         <img
           class="hamburger"
           src="./css/images/icon-hamburger.svg"
@@ -31,8 +27,10 @@
           <ul>
             <li class="list">
               Product<span
-                ><img src="./css/images/icon-arrow-dark.svg" alt="arrow"
-                class="arrow"                
+                ><img
+                  src="./css/images/icon-arrow-dark.svg"
+                  alt="arrow"
+                  class="arrow"
               /></span>
               <ul class="sub-list">
                 <li>Overview</li>
@@ -44,8 +42,10 @@
             </li>
             <li class="list">
               Company<span
-                ><img src="./css/images/icon-arrow-dark.svg" alt="arrow"
-                class="arrow"                
+                ><img
+                  src="./css/images/icon-arrow-dark.svg"
+                  alt="arrow"
+                  class="arrow"
               /></span>
               <ul class="sub-list">
                 <li>About</li>
@@ -56,8 +56,10 @@
             </li>
             <li class="list">
               Connect<span
-                ><img src="./css/images/icon-arrow-dark.svg" alt="arrow"
-                class="arrow"                
+                ><img
+                  src="./css/images/icon-arrow-dark.svg"
+                  alt="arrow"
+                  class="arrow"
               /></span>
               <ul class="sub-list">
                 <li>Contact</li>
