--- a/blogr-landing-page-main/index.html
+++ b/blogr-landing-page-main/index.html
@@ -114,58 +114,69 @@
       <section class="sections__one">
         <h2 class="sections__title">Designed for the future</h2>
         <div class="img"></div>
-        <h3 class="sections__subtitle">Introducing an extensible editor</h3>
-        <p class="sections__paragraph">
-          Blogr features an exceedingly intuitive interface which lets you focus
-          on one thing: creating content. The editor supports management of
-          multiple blogs and allows easy manipulation of embeds such as images,
-          videos, and Markdown. Extensibility with plugins and themes provide
-          easy ways to add functionality or change the looks of a blog.
-        </p>
-        <h3 class="sections__subtitle">Robust content management</h3>
-        <p class="sections__paragraph">
-          Flexible content management enables users to easily move through
-          posts. Increase the usability of your blog by adding customized
-          categories, sections, format, or flow. With this functionality, you’re
-          in full control.
-        </p>
+
+        <div class="container-one container--max-wigth">
+          <h3 class="sections__subtitle">Introducing an extensible editor</h3>
+          <p class="sections__paragraph">
+            Blogr features an exceedingly intuitive interface which lets you focus
+            on one thing: creating content. The editor supports management of
+            multiple blogs and allows easy manipulation of embeds such as images,
+            videos, and Markdown. Extensibility with plugins and themes provide
+            easy ways to add functionality or change the looks of a blog.
+          </p>
+          <h3 class="sections__subtitle">Robust content management</h3>
+          <p class="sections__paragraph">
+            Flexible content management enables users to easily move through
+            posts. Increase the usability of your blog by adding customized
+            categories, sections, format, or flow. With this functionality, you’re
+            in full control.
+          </p>
+        </div>
+
       </section>
 
       <section class="sections__two">
-        <div class="sections__img">
-          <img
-            class="img"
-            src="./css/images/illustration-phones.svg"
-            width="360px"
-            alt="images phones"
-          />
+        <div class="sections__container container--max-wigth">
+          <div class="sections__img">
+            <img
+              class="img"
+              src="./css/images/illustration-phones.svg"
+              alt="images phones"
+            />
+          </div>
+          <div class="sections__content">
+            <h2 class="sections__title">State of the Art Infrastructure</h2>
+            <p class="sections__paragraph">
+              With reliability and speed in mind, worldwide data centers provide the
+              backbone for ultra-fast connectivity. This ensures your site will load
+              instantly, no matter where your readers are, keeping your site
+              competitive.
+            </p>
+          </div>
         </div>
-        <h2 class="sections__title">State of the Art Infrastructure</h2>
-        <p class="sections__paragraph">
-          With reliability and speed in mind, worldwide data centers provide the
-          backbone for ultra-fast connectivity. This ensures your site will load
-          instantly, no matter where your readers are, keeping your site
-          competitive.
-        </p>
       </section>
 
-      <section class="sections__three">
+      <section class="sections__three hidden">
         <div class="img"></div>
-        <h3 class="sections__subtitle">Free, open, simple</h3>
-        <p class="sections__paragraph">
-          Blogr is a free and open source application backed by a large
-          community of helpful developers. It supports features such as code
-          syntax highlighting, RSS feeds, social media integration, third-party
-          commenting tools, and works seamlessly with Google Analytics. The
-          architecture is clean and is relatively easy to learn.
-        </p>
 
-        <h3 class="sections__subtitle">Powerful tooling</h3>
-        <p class="sections__paragraph">
-          Batteries included. We built a simple and straightforward CLI tool
-          that makes customization and deployment a breeze, but capable of
-          producing even the most complicated sites.
-        </p>
+        <div class="">
+          <h3 class="sections__subtitle">Free, open, simple</h3>
+          <p class="sections__paragraph">
+            Blogr is a free and open source application backed by a large
+            community of helpful developers. It supports features such as code
+            syntax highlighting, RSS feeds, social media integration, third-party
+            commenting tools, and works seamlessly with Google Analytics. The
+            architecture is clean and is relatively easy to learn.
+          </p>
+        </div>
+        <div class="">
+          <h3 class="sections__subtitle">Powerful tooling</h3>
+          <p class="sections__paragraph">
+            Batteries included. We built a simple and straightforward CLI tool
+            that makes customization and deployment a breeze, but capable of
+            producing even the most complicated sites.
+          </p>
+        </div>
       </section>
     </main>
 
