I add desktop design completed

--- a/blogr-landing-page-main/index.html
+++ b/blogr-landing-page-main/index.html
@@ -14,7 +14,7 @@
     <link rel="stylesheet" href="./css/style.css" />
   </head>
   <body>
-    <header class="header hidden">
+    <header class="header">
       <div class="header__states container--max-wigth">
         <img src="./css/images/logo.svg" width="100px" alt="logo" />
         <img
@@ -156,31 +156,35 @@
         </div>
       </section>
 
-      <section class="sections__three hidden">
-        <div class="img"></div>
+      <section class="sections__three">
 
-        <div class="">
-          <h3 class="sections__subtitle">Free, open, simple</h3>
-          <p class="sections__paragraph">
-            Blogr is a free and open source application backed by a large
-            community of helpful developers. It supports features such as code
-            syntax highlighting, RSS feeds, social media integration, third-party
-            commenting tools, and works seamlessly with Google Analytics. The
-            architecture is clean and is relatively easy to learn.
-          </p>
+        <div class="sections__container container--max-wigth">
+
+          <div class="img"></div>
+
+          <div class=" sections__content">
+            <h3 class="sections__subtitle">Free, open, simple</h3>
+            <p class="sections__paragraph">
+              Blogr is a free and open source application backed by a large
+              community of helpful developers. It supports features such as code
+              syntax highlighting, RSS feeds, social media integration, third-party
+              commenting tools, and works seamlessly with Google Analytics. The
+              architecture is clean and is relatively easy to learn.
+            </p>
+            
+            <h3 class="sections__subtitle">Powerful tooling</h3>
+            <p class="sections__paragraph">
+              Batteries included. We built a simple and straightforward CLI tool
+              that makes customization and deployment a breeze, but capable of
+              producing even the most complicated sites.
+            </p>
+          </div>
         </div>
-        <div class="">
-          <h3 class="sections__subtitle">Powerful tooling</h3>
-          <p class="sections__paragraph">
-            Batteries included. We built a simple and straightforward CLI tool
-            that makes customization and deployment a breeze, but capable of
-            producing even the most complicated sites.
-          </p>
-        </div>
+
       </section>
     </main>
 
-    <footer class="footer hidden">
+    <footer class="footer">
       <div class="footer__container container--max-wigth ">
         <img class="footer__img" src="./css/images/logo.svg" alt="loco" />
         <div class="footer__box">
