Add Readme.md full

--- a/blogr-landing-page-main/index.html
+++ b/blogr-landing-page-main/index.html
@@ -118,21 +118,21 @@
         <div class="container-one container--max-wigth">
           <h3 class="sections__subtitle">Introducing an extensible editor</h3>
           <p class="sections__paragraph">
-            Blogr features an exceedingly intuitive interface which lets you focus
-            on one thing: creating content. The editor supports management of
-            multiple blogs and allows easy manipulation of embeds such as images,
-            videos, and Markdown. Extensibility with plugins and themes provide
-            easy ways to add functionality or change the looks of a blog.
+            Blogr features an exceedingly intuitive interface which lets you
+            focus on one thing: creating content. The editor supports management
+            of multiple blogs and allows easy manipulation of embeds such as
+            images, videos, and Markdown. Extensibility with plugins and themes
+            provide easy ways to add functionality or change the looks of a
+            blog.
           </p>
           <h3 class="sections__subtitle">Robust content management</h3>
           <p class="sections__paragraph">
             Flexible content management enables users to easily move through
             posts. Increase the usability of your blog by adding customized
-            categories, sections, format, or flow. With this functionality, you’re
-            in full control.
+            categories, sections, format, or flow. With this functionality,
+            you’re in full control.
           </p>
         </div>
-
       </section>
 
       <section class="sections__two">
@@ -147,31 +147,30 @@
           <div class="sections__content">
             <h2 class="sections__title">State of the Art Infrastructure</h2>
             <p class="sections__paragraph">
-              With reliability and speed in mind, worldwide data centers provide the
-              backbone for ultra-fast connectivity. This ensures your site will load
-              instantly, no matter where your readers are, keeping your site
-              competitive.
+              With reliability and speed in mind, worldwide data centers provide
+              the backbone for ultra-fast connectivity. This ensures your site
+              will load instantly, no matter where your readers are, keeping
+              your site competitive.
             </p>
           </div>
         </div>
       </section>
 
       <section class="sections__three">
-
         <div class="sections__container container--max-wigth">
-
           <div class="img"></div>
 
-          <div class=" sections__content">
+          <div class="sections__content">
             <h3 class="sections__subtitle">Free, open, simple</h3>
             <p class="sections__paragraph">
               Blogr is a free and open source application backed by a large
               community of helpful developers. It supports features such as code
-              syntax highlighting, RSS feeds, social media integration, third-party
-              commenting tools, and works seamlessly with Google Analytics. The
-              architecture is clean and is relatively easy to learn.
+              syntax highlighting, RSS feeds, social media integration,
+              third-party commenting tools, and works seamlessly with Google
+              Analytics. The architecture is clean and is relatively easy to
+              learn.
             </p>
-            
+
             <h3 class="sections__subtitle">Powerful tooling</h3>
             <p class="sections__paragraph">
               Batteries included. We built a simple and straightforward CLI tool
@@ -180,12 +179,11 @@
             </p>
           </div>
         </div>
-
       </section>
     </main>
 
     <footer class="footer">
-      <div class="footer__container container--max-wigth ">
+      <div class="footer__container container--max-wigth">
         <img class="footer__img" src="./css/images/logo.svg" alt="loco" />
         <div class="footer__box">
           <h4 class="title">Product</h4>
@@ -195,7 +193,7 @@
           <a href="#footer">Features</a>
           <a href="#footer">Integrations</a>
         </div>
-  
+
         <div class="footer__box">
           <h4 class="title">Company</h4>
           <a href="#footer">About</a>
@@ -203,7 +201,7 @@
           <a href="#footer">Blog</a>
           <a href="#footer">Careers</a>
         </div>
-  
+
         <div class="footer__box">
           <h4 class="title">Connect</h4>
           <a href="#footer">Contact</a>
