--- a/tip-calculator-app-main/index.html
+++ b/tip-calculator-app-main/index.html
@@ -24,7 +24,7 @@
             <h2 class="sub_title">Bill</h2>
             <div class="box">
               <img src="./css/images/icon-dollar.svg" alt="icon dollar" />
-              <input class="input" type="number" />
+              <input class="input" type="number" placeholder="0"/>
             </div>
           </div>
           <div class="data_tip">
