--- a/tip-calculator-app-main/index.html
+++ b/tip-calculator-app-main/index.html
@@ -24,7 +24,7 @@
             <h2 class="sub_title">Bill</h2>
             <div class="box">
               <img src="./css/images/icon-dollar.svg" alt="icon dollar" />
-              <input class="input" type="number" placeholder="0"/>
+              <input class="input input_bill" type="number" placeholder="0"/>
             </div>
           </div>
           <div class="data_tip">
@@ -36,7 +36,7 @@
               <button class="button">25%</button>
               <button class="button">50%</button>
               <div class="input_container">
-                <input class="input" type="number" placeholder="Custom" />
+                <input class="input input_tip" type="number" placeholder="Custom" />
               </div>
             </div>
           </div>
@@ -47,24 +47,26 @@
             </div>
             <div class="box">
               <img src="./css/images/icon-person.svg" alt="icon person" />
-              <input class="input" type="number" placeholder="0"/>
+              <input class="input input_person" type="number" placeholder="0"/>
             </div>
           </div>
         </div>
         <div class="response_container">
-          <div class="response_box">
-            <div>
-              <h2 class="sub_title">Tip Amount</h2>
-              <p>/ person</p>
+          <div>            
+            <div class="response_box">
+              <div>
+                <h2 class="sub_title">Tip Amount</h2>
+                <p>/ person</p>
+              </div>
+              <p class="response_tip">$0.00</p>
             </div>
-            <p class="response_tip">$0.00</p>
-          </div>
-          <div class="response_box">
-            <div>
-              <h2 class="sub_title">Total</h2>
-              <p>/ person</p>
+            <div class="response_box">
+              <div>
+                <h2 class="sub_title">Total</h2>
+                <p>/ person</p>
+              </div>
+              <p class="response_total">$0.00</p>
             </div>
-            <p class="response_total">$0.00</p>
           </div>
           <button class="button_reset">Reset</button>
         </div>
