I add full functionality

--- a/tip-calculator-app-main/index.html
+++ b/tip-calculator-app-main/index.html
@@ -24,7 +24,7 @@
             <h2 class="sub_title">Bill</h2>
             <div class="box">
               <img src="./css/images/icon-dollar.svg" alt="icon dollar" />
-              <input class="input input_bill" type="number" placeholder="0"/>
+              <input class="input" id="input_bill" type="number" placeholder="0"/>
             </div>
           </div>
           <div class="data_tip">
@@ -35,8 +35,8 @@
               <button class="button">15%</button>
               <button class="button">25%</button>
               <button class="button">50%</button>
-              <div class="input_container">
-                <input class="input input_tip" type="number" placeholder="Custom" />
+              <div class="input_container" >
+                <input class="input" id="input_tip" type="number" placeholder="Custom" />
               </div>
             </div>
           </div>
@@ -45,9 +45,9 @@
               <h2 class="sub_title">Number of People</h2>
               <h2 class="sub_title text_error">Can´t be zero</h2>
             </div>
-            <div class="box">
+            <div class="box border_error">
               <img src="./css/images/icon-person.svg" alt="icon person" />
-              <input class="input input_person" type="number" placeholder="0"/>
+              <input class="input" id="input_person" type="number" placeholder="0"/>
             </div>
           </div>
         </div>
