Arreglo la forma de captar el boton reset

--- a/tip-calculator-app-main/index.html
+++ b/tip-calculator-app-main/index.html
@@ -68,7 +68,7 @@
               <p class="response_total">$0.00</p>
             </div>
           </div>
-          <button class="button_reset">Reset</button>
+          <div class="button_reset">Reset</div>
         </div>
       </section>
     </main>
