--- a/3-column-preview-card-component-main/index.html
+++ b/3-column-preview-card-component-main/index.html
@@ -17,38 +17,43 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="./css/style.css" />
+    <link rel="stylesheet" href="./css/tablet.css" media="(min-width:700px)">
+    <link rel="stylesheet" href="./css/desktop.css" media="(min-width:1024px)">
+
   </head>
   <body>
     <main class="main-container">
       <section class="main-container__articles">
-        <article class="main-container__article sedans">
-          <img src="./assets/images/icon-sedans.svg" alt="icon sedans" />
-          <h2>Sedans</h2>
-          <p>
-            Choose a sedan for its affordability and excellent fuel economy.
-            Ideal for cruising in the city or on your next road trip.
-          </p>
-          <button>Lear More</button>
-        </article>
-
-        <article class="main-container__article suvs">
-          <img src="./assets/images/icon-suvs.svg" alt="icon suvs" />
-          <h2>SUVs</h2>
-          <p>
-            Take an SUV for its spacious interior, power, and versatility.
-            Perfect for your next family vacation and off-road adventures.
-          </p>
-          <button>Lear More</button>
-        </article>
+        <div class="main-container__articles--flex">
+          <article class="main-container__article sedans">
+            <img height="40" width="60" src="./assets/images/icon-sedans.svg" alt="icon sedans" />
+            <h2>Sedans</h2>
+            <p>
+              Choose a sedan for its affordability and excellent fuel economy.
+              Ideal for cruising in the city or on your next road trip.
+            </p>
+            <button>Learn More</button>
+          </article>
+  
+          <article class="main-container__article suvs">
+            <img height="40" width="60" src="./assets/images/icon-suvs.svg" alt="icon suvs" />
+            <h2>SUVs</h2>
+            <p>
+              Take an SUV for its spacious interior, power, and versatility.
+              Perfect for your next family vacation and off-road adventures.
+            </p>
+            <button>Learn More</button>
+          </article>
+        </div>
 
         <article class="main-container__article luxury">
-          <img src="./assets/images/icon-luxury.svg" alt="icon luxury" />
+          <img height="40" width="60" src="./assets/images/icon-luxury.svg" alt="icon luxury" />
           <h2>Luxury</h2>
           <p>
             Cruise in the best car brands without the bloated prices. Enjoy the
             enhanced comfort of a luxury rental and arrive in style.
           </p>
-          <button>Lear More</button>
+          <button>Learn More</button>
         </article>
       </section>
     </main>
