--- a/order-summary-component-main/index.html
+++ b/order-summary-component-main/index.html
@@ -16,12 +16,12 @@
       href="https://fonts.googleapis.com/css2?family=Red+Hat+Display:wght@500;700;900&display=swap"
       rel="stylesheet"
     />
+    <link rel="stylesheet" href="./css/style.css" />
     <link
       rel="stylesheet"
       href="./css/desktop.css"
-      media="(min-width:1024px)"
+      media="(min-width:500px)"
     />
-    <link rel="stylesheet" href="./css/style.css" />
   </head>
   <body>
     <main class="main-container">
@@ -35,10 +35,12 @@
           </p>
         </div>
         <div class="card__plan">
-          <span class="card__icon"> </span>
           <div>
-            <p>Annual Plan</p>
-            <p>$59.99/year</p>
+            <span class="card__icon"> </span>
+            <div>
+              <p>Annual Plan</p>
+              <p>$59.99/year</p>
+            </div>
           </div>
           <a href="#"> Change </a>
         </div>
