i add structure html

--- a/huddle-landing-page-with-single-introductory-section-master/index.html
+++ b/huddle-landing-page-with-single-introductory-section-master/index.html
@@ -46,7 +46,7 @@
         </div>
       </section>
 
-      <footer class="footer">
+      <footer class="footer space-lateral">
         <div>
           <i class="fab fa-facebook-f"></i>
         </div>
