i add structure html

--- a/social-media-dashboard-with-theme-switcher-master/index.html
+++ b/social-media-dashboard-with-theme-switcher-master/index.html
@@ -1,87 +1,163 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="./assets/images/favicon-32x32.png"
+    />
+    <link rel="stylesheet" href="./css/mode-ligth.css">
+    <link rel="stylesheet" href="./css/mobile.css" />
+    <link rel="stylesheet" href="./css/desktop.css" media="(min-width:1200px)" />
+    <title>social media dashboard with theme switcher master - Mooenz</title>
+  </head>
+  <body>
+    <main class="main">
+      <div class="bg-top"></div>
+      <section class="social-media">
+        <section class="social-media-content">
+          <div class="social-media-content__title">
+            <h2>Social Media Dashboard</h2>
+            <p>Total Followers: 23,004</p>
+          </div>
 
-  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
-  <title>Frontend Mentor | [Challenge Name Here]</title>
+          <div class="dark-mode-container">
+            <p>Dark Mode</p>
+            <div class="dark-mode"></div>
+          </div>
+        </section>
 
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
-</head>
-<body>
+        <section class="social-media__followers">
+          <article class="card__followers facebook-line">
+            <p><span class="facebook"></span> @nathanf</p>
+            <p>1987</p>
+            <p>Followers</p>
+            <p class="mark arrow-up"><span></span>12 Today</p>
+          </article>
 
-  Social Media Dashboard
-  Total Followers: 23,004
+          <article class="card__followers twitter-line">
+            <p><span class="twitter"></span> @nathanf</p>
+            <p>1044</p>
+            <p>Followers</p>
+            <p class="mark arrow-up"><span></span>99 Today</p>
+          </article>
 
-  Dark Mode
+          <article class="card__followers instagram-line">
+            <p><span class="instagram"></span> @realnathanf</p>
+            <p>11k</p>
+            <p>Followers</p>
+            <p class="mark arrow-up"><span></span>1099 Today</p>
+          </article>
 
-  
+          <article class="card__followers youtube-line">
+            <p><span class="youtube"></span> Nathan F.</p>
+            <p>8239</p>
+            <p>Subscribers</p>
+            <p class="mark arrow-down"><span></span>144 Today</p>
+          </article>
+        </section>
+      </section>
 
-  @nathanf
-  1987
-  Followers
-  12 Today
+      <section class="stats">
+        <section class="stats__title">
+          <h2>Overview - Today</h2>
+        </section>
 
-  @nathanf
-  1044
-  Followers
-  99 Today
+        <section class="stats__today">
+          <article class="card-stats">
+            <div class="card-stats-type">
+              <p>Page Views</p>
+              <span class="facebook"></span>
+            </div>
+            <div class="card-stats-stat">
+              <p>87</p>
+              <p class="arrow-up"><span></span>3%</p>
+            </div>
+          </article>
 
-  @realnathanf
-  11k
-  Followers
-  1099 Today
+          <article class="card-stats">
+            <div class="card-stats-type">
+              <p>Likes</p>
+              <span class="facebook"></span>
+            </div>
+            <div class="card-stats-stat">
+              <p>52</p>
+              <p class="arrow-down"><span></span>2%</p>
+            </div>
+          </article>
 
-  Nathan F.
-  8239
-  Subscribers
-  144 Today
+          <article class="card-stats">
+            <div class="card-stats-type">
+              <p>Likes</p>
+              <span class="instagram"></span>
+            </div>
+            <div class="card-stats-stat">
+              <p>5462</p>
+              <p class="arrow-up"><span></span>2257%</p>
+            </div>
+          </article>
 
+          <article class="card-stats">
+            <div class="card-stats-type">
+              <p>Profile Views</p>
+              <span class="instagram"></span>
+            </div>
+            <div class="card-stats-stat">
+              <p>52k</p>
+              <p class="arrow-up"><span></span>1375%</p>
+            </div>
+          </article>
 
+          <article class="card-stats">
+            <div class="card-stats-type">
+              <p>Retweets</p>
+              <span class="twitter"></span>
+            </div>
+            <div class="card-stats-stat">
+              <p>117</p>
+              <p class="arrow-up"><span></span>303%</p>
+            </div>
+          </article>
 
-  Overview - Today
+          <article class="card-stats">
+            <div class="card-stats-type">
+              <p>Likes</p>
+              <span class="twitter"></span>
+            </div>
+            <div class="card-stats-stat">
+              <p>507</p>
+              <p class="arrow-up"><span></span>553%</p>
+            </div>
+          </article>
 
-  Page Views
-  87
-  3%
+          <article class="card-stats">
+            <div class="card-stats-type">
+              <p>Likes</p>
+              <span class="youtube"></span>
+            </div>
+            <div class="card-stats-stat">
+              <p>107</p>
+              <p class="arrow-down"><span></span>19%</p>
+            </div>
+          </article>
 
-  Likes
-  52
-  2%
+          <article class="card-stats">
+            <div class="card-stats-type">
+              <p>Total Views</p>
+              <span class="youtube"></span>
+            </div>
+            <div class="card-stats-stat">
+              <p>1407</p>
+              <p class="arrow-down"><span></span>12%</p>
+            </div>
+          </article>
+        </section>
+      </section>
+    </main>
 
-  Likes
-  5462
-  2257%
-
-  Profile Views
-  52k
-  1375%
-
-  Retweets
-  117
-  303%
-
-  Likes
-  507
-  553%
-
-  Likes
-  107
-  19%
-
-  Total Views
-  1407
-  12%
-  
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
-  </div>
-</body>
+    <script src="./index.js"></script>
+  </body>
 </html>
