i fix styles mode-light link

--- a/social-media-dashboard-with-theme-switcher-master/index.html
+++ b/social-media-dashboard-with-theme-switcher-master/index.html
@@ -9,9 +9,13 @@
       sizes="32x32"
       href="./assets/images/favicon-32x32.png"
     />
-    <link rel="stylesheet" href="./css/mode-ligth.css">
+    <link rel="stylesheet" href="./css/mode-light.css" />
     <link rel="stylesheet" href="./css/mobile.css" />
-    <link rel="stylesheet" href="./css/desktop.css" media="(min-width:1200px)" />
+    <link
+      rel="stylesheet"
+      href="./css/desktop.css"
+      media="(min-width:1200px)"
+    />
     <title>social media dashboard with theme switcher master - Mooenz</title>
   </head>
   <body>
