--- a/crowdfunding-product-page-main/index.html
+++ b/crowdfunding-product-page-main/index.html
@@ -1,113 +1,243 @@
 <!DOCTYPE html>
 <html lang="es">
   <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="./assets/images/favicon-32x32.png"
+    />
+    <link rel="stylesheet" href="./css/style.css" />
 
-    <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-    
     <title>Frontend Mentor | Crowdfunding product page</title>
-
   </head>
   <body>
-    About
-    Discover
-    Get Started
+    <header class="header">
+      <div class="header__img-container">
+        <img src="./assets/svg/logo.svg" alt="" />
+      </div>
+      <nav class="nav">
+        <ul>
+          <li>About</li>
+          <li>Discover</li>
+          <li>Get Started</li>
+        </ul>
+      </nav>
+    </header>
 
-    Mastercraft Bamboo Monitor Riser
-    A beautiful & handcrafted monitor stand to reduce neck and eye strain.
+    <main class="main">
+      <section class="product">
+        <section></section>
+        <span class="product__icon"></span>
+        <section class="product__content">
+          <h1 class="title">Mastercraft Bamboo Monitor Riser</h1>
+          <p class="paragraph">
+            A beautiful & handcrafted monitor stand to reduce neck and eye
+            strain.
+          </p>
+        </section>
 
-    Back this project
-    Bookmark
+        <section class="product__buttons">
+          <button class="button" id="back-project">Back this project</button>
+          <button class="bookmark">Bookmark</button>
+        </section>
+      </section>
 
-    $89,914 of $100,000 backed
-    5,007 total backers
-    56 days left
+      <section class="stats">
+        <section class="stats__backed">
+          <p class="title">$89,914</p>
+          <p class="paragraph">of $100,000 backed</p>
+        </section>
 
-    About this project
+        <section class="stats__total-backed">
+          <p class="title">5,007</p>
+          <p class="paragraph">total backers</p>
+        </section>
 
-    The Mastercraft Bamboo Monitor Riser is a sturdy and stylish platform that elevates your screen 
-    to a more comfortable viewing height. Placing your monitor at eye level has the potential to improve 
-    your posture and make you more comfortable while at work, helping you stay focused on the task at hand.
+        <section class="stats__days">
+          <p class="title">56</p>
+          <p class="paragraph">days left</p>
+        </section>
 
-    Featuring artisan craftsmanship, the simplicity of design creates extra desk space below your computer 
-    to allow notepads, pens, and USB sticks to be stored under the stand.
-    
-    Bamboo Stand
-    Pledge $25 or more
-    You get an ergonomic stand made of natural bamboo. You've helped us launch our promotional campaign, and 
-    you’ll be added to a special Backer member list.
-    101 left
-    Select Reward
+        <!-- Barra -->
+      </section>
 
-    Black Edition Stand
-    Pledge $75 or more
-    You get a Black Special Edition computer stand and a personal thank you. You’ll be added to our Backer 
-    member list. Shipping is included.
-    64 left
-    Select Reward
+      <section class="about">
+        <section class="about__content">
+          <h2 class="sub-title">About this project</h2>
+          <p class="paragraph">
+            The Mastercraft Bamboo Monitor Riser is a sturdy and stylish
+            platform that elevates your screen to a more comfortable viewing
+            height. Placing your monitor at eye level has the potential to
+            improve your posture and make you more comfortable while at work,
+            helping you stay focused on the task at hand.
+          </p>
+          <p class="paragraph">
+            Featuring artisan craftsmanship, the simplicity of design creates
+            extra desk space below your computer to allow notepads, pens, and
+            USB sticks to be stored under the stand.
+          </p>
+        </section>
 
-    Mahogany Special Edition
-    Pledge $200 or more
-    You get two Special Edition Mahogany stands, a Backer T-Shirt, and a personal thank you. You’ll be added 
-    to our Backer member list. Shipping is included.
-    0 left
-    Out of Stock
+        <section class="about__card">
+          <section class="sub-title-container">
+            <h2 class="sub-title">Bamboo Stand</h2>
+            <p class="price">Pledge $25 or more</p>
+          </section>
+          <p class="paragraph">
+            You get an ergonomic stand made of natural bamboo. You've helped us
+            launch our promotional campaign, and you’ll be added to a special
+            Backer member list.
+          </p>
+          <section class="select-container">
+            <p>101<span>left</span></p>
+            <button class="button" id="select-bamboo">Select Reward</button>
+          </section>
+        </section>
+
+        <section class="about__card">
+          <section class="sub-title-container">
+            <h2 class="sub-title">Black Edition Stand</h2>
+            <p class="price">Pledge $75 or more</p>
+          </section>
+          <p class="paragraph">
+            You get a Black Special Edition computer stand and a personal thank
+            you. You’ll be added to our Backer member list. Shipping is
+            included.
+          </p>
+          <section class="select-container">
+            <p>64<span>left</span></p>
+            <button class="button" id="select-black">Select Reward</button>
+          </section>
+        </section>
+
+        <section class="about__card">
+          <section class="sub-title-container">
+            <h2 class="sub-title">Mahogany Special Edition</h2>
+            <p class="price">Pledge $200 or more</p>
+          </section>
+          <p class="paragraph">
+            You get two Special Edition Mahogany stands, a Backer T-Shirt, and a
+            personal thank you. You’ll be added to our Backer member list.
+            Shipping is included.
+          </p>
+          <section class="select-container">
+            <p>0<span>left</span></p>
+            <button class="button disable">Out of Stock</button>
+          </section>
+        </section>
+      </section>
+    </main>
 
     <!-- Selection modal start -->
+    <section class="modal">
+      <section class="modal__content">
+        <h2 class="title">Back this project</h2>
+        <p class="paragraph">
+          Want to support us in bringing Mastercraft Bamboo Monitor Riser out in
+          the world?
+        </p>
+      </section>
 
-    Back this project
-    Want to support us in bringing Mastercraft Bamboo Monitor Riser out in the world?
+      <section class="modal__card">
+        <input type="radio" name="bamboo" id="no-reward" />
+        <section class="modal__card-content">
+          <h2 class="sub-title">Pledge with no reward</h2>
+          <p class="paragraph">
+            Choose to support us without a reward if you simply believe in our
+            project. As a backer, you will be signed up to receive product
+            updates via email.
+          </p>
+        </section>
 
-    Pledge with no reward
-    Choose to support us without a reward if you simply believe in our project. As a backer, 
-    you will be signed up to receive product updates via email.
+        <section class="modal__card">
+          <input type="radio" name="bamboo" id="bamboo" />
+          <section class="modal__card-content">
+            <h2 class="sub-title">
+              Bamboo Stand<span>Pledge $25 or more</span>
+            </h2>
+            <p class="paragraph">
+              You get an ergonomic stand made of natural bamboo. You've helped
+              us launch our promotional campaign, and you’ll be added to a
+              special Backer member list.
+            </p>
+            <p>101 left</p>
+          </section>
+          <!-- Selected pledge start -->
+          <section class="pledge">
+            <p class="paragraph">Enter your pledge</p>
+            <div class="modal__buttons">
+              <input type="text" name="" id="" value="$25" />
+              <button>Continue</button>
+            </div>
+          </section>
+          <!-- Selected pledge end -->
+        </section>
 
-    Bamboo Stand
-    Pledge $25 or more
-    You get an ergonomic stand made of natural bamboo. You've helped us launch our promotional campaign, and
-    you’ll be added to a special Backer member list.
-    101 left
+        <section class="modal__card">
+          <input type="radio" name="black" id="black" />
+          <section class="modal__card-content">
+            <h2 class="sub-title">
+              Black Edition Stand<span>Pledge $75 or more</span>
+            </h2>
+            <p class="paragraph">
+              You get a Black Special Edition computer stand and a personal
+              thank you. You’ll be added to our Backer member list. Shipping is
+              included.
+            </p>
+            <p>64 left</p>
+          </section>
+          <!-- Selected pledge start -->
+          <section class="pledge">
+            <p class="paragraph">Enter your pledge</p>
+            <div class="modal__buttons">
+              <input type="text" name="" id="" value="$75" />
+              <button>Continue</button>
+            </div>
+          </section>
+          <!-- Selected pledge end -->
+        </section>
 
-    <!-- Selected pledge start -->
-    Enter your pledge
-    $25
-    Continue
-    <!-- Selected pledge end -->
-
-    Black Edition Stand
-    Pledge $75 or more
-    You get a Black Special Edition computer stand and a personal thank you. You’ll be added to our Backer
-    member list. Shipping is included.
-    64 left
-
-    <!-- Selected pledge start -->
-    Enter your pledge
-    $75
-    Continue
-    <!-- Selected pledge end -->
-
-    Mahogany Special Edition
-    Pledge $200 or more
-    You get two Special Edition Mahogany stands, a Backer T-Shirt, and a personal thank you. You’ll be added
-    to our Backer member list. Shipping is included.
-    0 left
-
-    <!-- Selected pledge  start -->
-    Enter your pledge
-    $200
-    Continue
-    <!-- Selected pledge end -->
-
-    <!-- Selection modal end -->
+        <section class="modal__card">
+          <input type="radio" name="special" id="special" />
+          <section class="modal__card-content">
+            <h2 class="sub-title">
+              Mahogany Special Edition<span>Pledge $200 or more</span>
+            </h2>
+            <p class="paragraph">
+              You get two Special Edition Mahogany stands, a Backer T-Shirt, and
+              a personal thank you. You’ll be added to our Backer member list.
+              Shipping is included. 0 left
+            </p>
+            <p>64 left</p>
+          </section>
+          <!-- Selected pledge start -->
+          <section class="pledge">
+            <p class="paragraph">Enter your pledge</p>
+            <div class="modal__buttons">
+              <input type="text" name="" id="" value="$200" />
+              <button>Continue</button>
+            </div>
+          </section>
+          <!-- Selected pledge end -->
+        </section>
+      </section>
+    </section>
 
     <!-- Success modal start -->
-
-    Thanks for your support!
-    Your pledge brings us one step closer to sharing Mastercraft Bamboo Monitor Riser worldwide. You will get
-    an email once our campaign is completed.
-    Got it!
-
+    <section class="modal__success">
+      <section class="modal">
+        <h2 class="sub-title">Thanks for your support!</h2>
+        <p class="paragraph">
+          Your pledge brings us one step closer to sharing Mastercraft Bamboo
+          Monitor Riser worldwide. You will get an email once our campaign is
+          completed.
+        </p>
+        <button class="button">Got it!</button>
+      </section>
+    </section>
     <!-- Success modal end -->
   </body>
 </html>
